# crew-ai-analysis-crew

./: .env.example  .gitignore  README.md  pyproject.toml
corpus/: README.md  who_is_abelardo.txt  who_is_ivan.txt  who_is_paloma.txt
documents/: README.md  presidential_election.txt
scripts/: test_tools.py
src/crew_ai_analysis_crew/: analysis_store.py  corpus_indexer.py  crew.py  html_utils.py  main.py  paths.py  schemas.py
src/crew_ai_analysis_crew/config/: agents.yaml  tasks.yaml
src/crew_ai_analysis_crew/report/: __init__.py  html_report.py  parse_outputs.py
src/crew_ai_analysis_crew/tools/: __init__.py  corpus_index.py  ner_tool.py  sentiment_tool.py  similarity_tool.py
