[project]
name = "crew-ai-analysis-crew"
version = "0.1.0"
description = "crew-ai-analysis-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2",
    "spacy>=3.7.5,<4.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "transformers>=4.40.0,<5.0.0",
    "tokenizers>=0.20.0,<0.22.0",
    "torch>=2.2.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=5.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
crew-ai-analysis-crew = "crew_ai_analysis_crew.main:run"
run_crew = "crew_ai_analysis_crew.main:run"
train = "crew_ai_analysis_crew.main:train"
replay = "crew_ai_analysis_crew.main:replay"
test = "crew_ai_analysis_crew.main:test"
run_with_trigger = "crew_ai_analysis_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crew_ai_analysis_crew"]

[tool.crewai]
type = "crew"
